Update and rename deploy-nginx.yml. to deploy-nginx.yml

--- a/.github/workflows/deploy-nginx.yml
+++ b/.github/workflows/deploy-nginx.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   deploy-nginx:
-    runs-on: github-runner  # Ensure this runner is correctly configured
+    runs-on: github-runner
 
     steps:
     - name: Checkout code
